# Copyright 2022 Jetperch LLC
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

# See https://toml.io/

# A build-system independent format for source trees: https://peps.python.org/pep-0517/
# Specifying Minimum Build System Requirements for Python Projects: https://peps.python.org/pep-0518/
[build-system]
# Minimum requirements for the build system to execute.
requires = [
    "PySide6>=6.5.1.1",
    "setuptools>=42",
    "wheel",
]
build-backend = "setuptools.build_meta"
